# AegisPT

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  projects.py  scans.py  vulnerabilities.py  web_enumeration.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: audit_log.py  project.py  scan.py  target.py  token.py  user.py  vulnerability.py  web_enum.py
backend/app/repositories/: project_repository.py  scan_repository.py  user_repository.py  vulnerability_repository.py  web_enum_repository.py
backend/app/schemas/: auth.py  project.py  scan.py  target.py  user.py  vulnerability.py  web_enum.py
backend/app/services/: auth_service.py  nmap_service.py  project_service.py  vulnerability_service.py  web_enum_service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_projects.py  test_scans.py  test_vulnerabilities.py  test_web_enumeration.py
backend/tests/unit/: test_security.py
docker/: Dockerfile.backend  docker-compose.yml
